fixed team-list gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -430,11 +430,13 @@ p {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 24px;
+    gap: 72px;
 }
 @media only screen and (min-width: 767.98px) {
   .team-list {
     max-width: 552px;
+    row-gap: 64px;
+    column-gap: 24px;
   }
 }
 @media only screen and (min-width: 1158px) {
@@ -508,7 +510,9 @@ p {
     display: flex;
     flex-direction: column;
     width: 288px;
-    
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+            0 1px 1px 0 rgba(46, 47, 66, 0.16),
+            0 1px 6px 0 rgba(46, 47, 66, 0.08);
     
     transition: box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -520,6 +524,7 @@ p {
 @media only screen and (min-width: 1157.98px) {
   .portfolio-item {
     width: calc((100% - 48px) / 3);
+    box-shadow: none;
   }
 }
 .portfolio-info {
@@ -527,12 +532,13 @@ p {
     border: 1px solid #E7E9FC;
     border-top: none;
 }
-
+@media only screen and (min-width: 1157.98px) {
 .portfolio-item:hover,
 .portfolio-item:focus {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
         0 1px 1px 0 rgba(46, 47, 66, 0.16),
         0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
 }
 .portfolio-overlay-container {
     width: 100%;
